# Facial-Landmark

./: CMakeLists.txt  CMakeLists_Mac_CV.txt  README.md
FaceDetection/: CMakeLists.txt
include/: detect.textClipping  keypoint.h
include/opencv2/: cvconfig.h
libs/: libopencv_aruco.3.4.1.dylib  libopencv_aruco.3.4.dylib  libopencv_aruco.dylib  libopencv_bgsegm.3.4.1.dylib  libopencv_bgsegm.3.4.dylib  libopencv_bgsegm.dylib  libopencv_bioinspired.3.4.1.dylib  libopencv_bioinspired.3.4.dylib  libopencv_bioinspired.dylib  libopencv_calib3d.3.4.1.dylib  libopencv_calib3d.3.4.dylib  libopencv_ccalib.3.4.1.dylib  libopencv_ccalib.3.4.dylib  libopencv_ccalib.dylib  libopencv_core.3.4.1.dylib  libopencv_core.3.4.dylib  libopencv_datasets.3.4.1.dylib  libopencv_datasets.3.4.dylib  libopencv_datasets.dylib  libopencv_dnn.3.4.dylib  libopencv_dnn.dylib  libopencv_dnn_objdetect.3.4.1.dylib  libopencv_dnn_objdetect.3.4.dylib  libopencv_dnn_objdetect.dylib  libopencv_dpm.3.4.1.dylib  libopencv_dpm.3.4.dylib  libopencv_dpm.dylib  libopencv_face.3.4.1.dylib  libopencv_face.3.4.dylib  libopencv_face.dylib  libopencv_features2d.3.4.1.dylib  libopencv_features2d.3.4.dylib  libopencv_flann.3.4.1.dylib  libopencv_flann.3.4.dylib  libopencv_flann.dylib  libopencv_fuzzy.3.4.1.dylib  libopencv_fuzzy.3.4.dylib  libopencv_fuzzy.dylib  libopencv_hdf.3.4.1.dylib  libopencv_hdf.3.4.dylib  (+86 more)
src/: Pic_LandMark68.cpp  real_dlib.cpp  real_dlib_muban_roi.cpp  real_seeta.cpp  video_Seeta_Track.cpp
